BUG FIX: Commentary window scroll issue on Firefox. Removed CSS transitions

--- a/templates/commentary.css
+++ b/templates/commentary.css
@@ -18,7 +18,12 @@
     -webkit-transition: all .5s cubic-bezier(.42, 0, .16, 1.66);
     -o-transition: all .5s cubic-bezier(.42, 0, .16, 1.66);
     -moz-transition: all .5s cubic-bezier(.42, 0, .16, 1.66);
-    transition: all .5s cubic-bezier(.42, 0, .16, 1.66)
+    transition: all .5s cubic-bezier(.42, 0, .16, 1.66);
+
+    -webkit-transition-property: background, color;
+    -o-transition-property: background, color;
+    -moz-transition-property: background, color;
+    transition-property: background, color;
 }
 
 .cndce-template[data-template="commentary"] commentary h1{
